# controllers/users_controller.go
@@ -1,27 +1,20 @@
 package controllers
 
 import (
-	//"blog/configs"
 	"blog/interfaces"
 	"blog/models"
 	"blog/repositories"
 	"blog/responses"
 	"strconv"
 
-	//"blog/servers"
 	"blog/services"
 
-	//"blog/services"
-	//"context"
+
 	"net/http"
-	//"time"
+
 
 	"github.com/gin-gonic/gin"
-	//"github.com/go-playground/validator/v10"
 	"go.mongodb.org/mongo-driver/mongo"
-	//"go.mongodb.org/mongo-driver/bson"
-	//"go.mongodb.org/mongo-driver/bson/primitive"
-	//"go.mongodb.org/mongo-driver/mongo"
 )
 
 
@@ -30,48 +23,10 @@ type UsersController struct{
 }
 
 
-//var userCollection *mongo.Collection = configs.GetCollection(configs.DB,"users")
-//var validate = validator.New()
-
-// func CreateUser() gin.HandlerFunc{
-// 	return func(c *gin.Context) {
-// 		ctx, cancelFunc := context.WithTimeout(context.Background(), 10*time.Second)
-//         var user models.User
-//         defer cancelFunc()
-
-// 		//validate the request body
-//         if err := c.BindJSON(&user); err != nil {
-//             c.JSON(http.StatusBadRequest, responses.UserResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
-//             return
-//         }
-
-// 		//use the validator library to validate required fields
-//         if validationErr := validate.Struct(&user); validationErr != nil {
-//             c.JSON(http.StatusBadRequest, responses.UserResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": validationErr.Error()}})
-//             return
-//         }
-
-// 		newUser := models.User{
-//             Id:primitive.NewObjectID(),
-//             Name:user.Name,
-//             Email: user.Email,
-//             Password:user.Password,
-//         }
-
-// 		result, err := userCollection.InsertOne(ctx, newUser)
-//         if err != nil {
-//             c.JSON(http.StatusInternalServerError, responses.UserResponse{Status: http.StatusInternalServerError, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
-//             return
-//         }
-
-//         c.JSON(http.StatusCreated, responses.UserResponse{Status: http.StatusCreated, Message: "success", Data: map[string]interface{}{"data": result}})
-// 	}
-// }
-
 
 // CreateUser godoc
-// @Summary      create user account
-// @Description  create user account
+// @Summary      create new user 
+// @Description  create new user
 // @Tags         users
 // @Accept       json
 // @Produce      json
@@ -110,14 +65,14 @@ func (controller UsersController) CreateUser() gin.HandlerFunc{
 // @Produce      json
 // @Param        page   query      int  false  "Page number"
 // @Param        size   query      int  false  "Number of object you want to return"
-// @Success      200  {object}  responses.Response{data=[]models.User}
+// @Success      200  {object}  responses.Response{data=[]models.UserLight}
 // @Failure      400  {object}  responses.Response
 // @Failure      500  {object}  responses.Response 
 // @Router       /users [get]
 func (controller UsersController) GetAllUsers() gin.HandlerFunc {
     return func(c *gin.Context){
 
-        var result []models.User
+        var result []models.UserLight
         var err error
         size := c.Query("size") 
         page := c.Query("page")
@@ -228,13 +183,18 @@ func (controller UsersController) UpdateUserById() gin.HandlerFunc{
 	}
 }
 
-
+var usersService *services.UsersService = nil
+func GetUsersService(DB *mongo.Client) *services.UsersService{
+    if usersService == nil{
+        usersRepository := repositories.UsersRepository{DB:DB}
+        usersService = &services.UsersService{Repository:usersRepository}
+    }
+    return usersService 
+}
 
 func CreateUsersController(DB *mongo.Client) *UsersController{
-
-    usersRepository := repositories.UsersRepository{DB:DB}
-    usersService := services.UsersService{Repository:usersRepository}
-    return &UsersController{Service:usersService} 
+    usersServiceObj := GetUsersService(DB)
+    return &UsersController{Service:usersServiceObj} 
 } 
 
 
