# docs/swagger.json
@@ -283,7 +283,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Post"
+                                                "$ref": "#/definitions/models.PostLight"
                                             }
                                         }
                                     }
@@ -576,7 +576,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.User"
+                                                "$ref": "#/definitions/models.UserLight"
                                             }
                                         }
                                     }
@@ -599,7 +599,7 @@
                 }
             },
             "post": {
-                "description": "create user account",
+                "description": "create new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -609,7 +609,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "create user account",
+                "summary": "create new user",
                 "parameters": [
                     {
                         "description": "Add user",
@@ -835,7 +835,7 @@
             "required": [
                 "body",
                 "post_id",
-                "user_id"
+                "user"
             ],
             "properties": {
                 "body": {
@@ -848,13 +848,13 @@
                     "type": "string"
                 },
                 "post_id": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.PostLight"
                 },
                 "updated_at": {
                     "type": "string"
                 },
-                "user_id": {
-                    "type": "string"
+                "user": {
+                    "$ref": "#/definitions/models.UserLight"
                 }
             }
         },
@@ -877,6 +877,24 @@
                 }
             }
         },
+        "models.CommentLight": {
+            "type": "object",
+            "required": [
+                "body",
+                "user"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.UserLight"
+                }
+            }
+        },
         "models.CommentUpdateRequest": {
             "type": "object",
             "required": [
@@ -892,12 +910,17 @@
             "type": "object",
             "required": [
                 "body",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
                 "body": {
                     "type": "string"
+                },
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CommentLight"
+                    }
                 },
                 "created_at": {
                     "type": "string"
@@ -911,8 +934,8 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "user_id": {
-                    "type": "string"
+                "user": {
+                    "$ref": "#/definitions/models.UserLight"
                 }
             }
         },
@@ -931,6 +954,57 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.PostLight": {
+            "type": "object",
+            "required": [
+                "body",
+                "title"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.UserLight"
+                }
+            }
+        },
+        "models.PostMinimal": {
+            "type": "object",
+            "required": [
+                "body",
+                "title"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -971,6 +1045,36 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "posts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.PostMinimal"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserLight": {
+            "type": "object",
+            "required": [
+                "email",
+                "name"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "updated_at": {
